--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
     <!-- build:js scripts/combined.js -->
     <script src="scripts/utilities.js"></script>
     <script src="scripts/layers.js"></script>
-    <script src="scripts/core.js"></script>
+    <script src="scripts/core3.js"></script>
     <!-- endbuild -->
 
 </head>
@@ -212,6 +212,19 @@
                 <div id="layersPanel" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="layersPanelHeader">
                     <div id="toggle" style="padding: 2px 2px;"></div>
                 </div>
+
+                <div class="dropdown">
+                    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Lake Filter
+                    <span class="caret"></span></button>
+                    <ul class="dropdown-menu lakeDropdown">
+                        <li><a href="#">1</a></li>
+                        <li><a href="#">2</a></li>
+                        <li><a href="#">3</a></li>
+                        <li><a href="#">4</a></li>
+                        <li><a href="#">5</a></li>
+                    </ul>
+                </div>
+
             </div>
             <!-- # closing div tag for accordion style panels -->
             <!--</div>-->
