new filters started

--- a/src/index.html
+++ b/src/index.html
@@ -217,11 +217,27 @@
                     <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Lake Filter
                     <span class="caret"></span></button>
                     <ul class="dropdown-menu lakeDropdown">
-                        <li><a href="#">1</a></li>
-                        <li><a href="#">2</a></li>
-                        <li><a href="#">3</a></li>
-                        <li><a href="#">4</a></li>
-                        <li><a href="#">5</a></li>
+                        <li><a href="#">Superior</a></li>
+                        <li><a href="#">Michigan</a></li>
+                        <li><a href="#">Huron</a></li>
+                        <li><a href="#">Erie</a></li>
+                        <li><a href="#">Ontario</a></li>
+                    </ul>
+                </div>
+
+                 <div class="dropdown">
+                    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">State/Province Filter
+                    <span class="caret"></span></button>
+                    <ul class="dropdown-menu stateDropdown">
+                        <li><a href="#">Michigan</a></li>
+                        <li><a href="#">Wisconsin</a></li>
+                        <li><a href="#">Indiana</a></li>
+                        <li><a href="#">Minnesota</a></li>
+                        <li><a href="#">New York</a></li>
+                        <li><a href="#">Illinois</a></li>
+                        <li><a href="#">Ohio</a></li>
+                        <li><a href="#">Ontario</a></li>
+                        <li><a href="#">Pennsylvania</a></li>
                     </ul>
                 </div>
 
