--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
     <!-- build:js scripts/combined.js -->
     <script src="scripts/utilities.js"></script>
     <script src="scripts/layers.js"></script>
-    <script src="scripts/core3.js"></script>
+    <script src="scripts/core.js"></script>
     <!-- endbuild -->
 
 </head>
