bootstrap-select functionality added

--- a/src/index.html
+++ b/src/index.html
@@ -228,7 +228,8 @@
                     </div>
                     <div id="filterPanel" class="panel-collapse collapse in" role="tabpanel" area-labeldby="filterPanelHeader">
                         
-                            <select class="selectpicker show-tick lakeSelect" title="Lake Filter" multiple>
+
+                         <select class="selectpicker show-tick lakeSelect" data-actions-box="true" title="Parameter Filter" multiple>
                               <option>Superior</option>
                               <option>Michigan</option>
                               <option>Huron</option>
@@ -236,7 +237,16 @@
                               <option>Ontario</option>
                             </select>
 
-                            <select class="selectpicker show-tick stateSelect" title="State/Province Filter" multiple>
+
+                            <select class="selectpicker show-tick lakeSelect" data-actions-box="true" title="Lake Filter" multiple>
+                              <option>Superior</option>
+                              <option>Michigan</option>
+                              <option>Huron</option>
+                              <option>Erie</option>
+                              <option>Ontario</option>
+                            </select>
+
+                            <select class="selectpicker show-tick stateSelect" data-actions-box="true" title="State/Province Filter" multiple>
                               <option>Michigan</option>
                               <option>Wisconsin</option>
                               <option>Minnesota</option>
@@ -247,8 +257,29 @@
                               <option>Pensylvania</option>
                             </select>
 
-                            <select class="selectpicker show-tick" data-live-search="true" title="Yuuge searchable List" multiple>
-                              <option>huge project list</option>
+                            <!--still not good in phone mode-->
+                            <select class="selectpicker show-tick" data-size="20" data-actions-box="true" data-live-search="true" data-width="220px" title="Yuuuuge searchable List" multiple>
+                              <option>SOO many projects</option>
+                              <option>project321</option>
+                              <option>project345</option>
+                              <option>project45345</option>
+                              <option>project65996</option>
+                              <option>project321</option>
+                              <option>project345</option>
+                              <option>project45345</option>
+                              <option>project65996</option>
+                              <option>project321</option>
+                              <option>project345</option>
+                              <option>SOME ITEM WITH A RIDICULOUSLY LONG NAME FOR NO APPARENT REASON OTHER THAN TO ANNOY A DEVELOPER</option>
+                              <option>project65996</option>
+                              <option>project321</option>
+                              <option>project345</option>
+                              <option>project45345</option>
+                              <option>project65996</option>
+                              <option>project321</option>
+                              <option>project345</option>
+                              <option>project45345</option>
+                              <option>project65996</option>
                               <option>project321</option>
                               <option>project345</option>
                               <option>project45345</option>
